add patch methods
